--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory(led)
-add_subdirectory(sdl)
 add_subdirectory(logging)
+
+if(ENABLED_SDL2)
+	add_subdirectory(sdl)
+endif(ENABLED_SDL2)
