--- a/apps/logging/CMakeLists.txt
+++ b/apps/logging/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_executable(nes.elf)
-target_sources(nes.elf PRIVATE
-	main.c
-	${CMAKE_SOURCE_DIR}/_syscalls.c)
-target_link_libraries(nes.elf PRIVATE stm32 logging)
+add_executable(log.elf)
+target_sources(log.elf PRIVATE
+	main.c)
+# ${CMAKE_SOURCE_DIR}/_syscalls.c)
+target_link_libraries(log.elf PRIVATE stm32 -Wl,--whole-archive logging -Wl,--no-whole-archive)
 
-add_custom_command(TARGET nes.elf POST_BUILD
+add_custom_command(TARGET log.elf POST_BUILD
 	COMMAND ${CMAKE_OBJCOPY}
-	ARGS -Oihex nes.elf nes.hex)
+	ARGS -Oihex log.elf log.hex)
