--- a/apps/logging/CMakeLists.txt
+++ b/apps/logging/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(log.elf)
 target_sources(log.elf PRIVATE
-	main.c)
-# ${CMAKE_SOURCE_DIR}/_syscalls.c)
+	main.c
+	)
 target_link_libraries(log.elf PRIVATE stm32 -Wl,--whole-archive logging -Wl,--no-whole-archive)
 
 add_custom_command(TARGET log.elf POST_BUILD
