--- a/apps/nes/CMakeLists.txt
+++ b/apps/nes/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_executable(nes.elf)
 target_sources(nes.elf PRIVATE
+	lcd.c
+	rom.c
 	main.c)
-# ${CMAKE_SOURCE_DIR}/_syscalls.c)
 target_link_libraries(nes.elf PRIVATE nes stm32 -Wl,--whole-archive logging -Wl,--no-whole-archive)
 
 add_custom_command(TARGET nes.elf POST_BUILD
