--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,14 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Prepare build environment
-      run: sudo apt install -y gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi libsdl2-dev ninja-build
+      run: |
+          sudo apt update
+          sudo apt install -y gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi libsdl2-dev ninja-build
 
     # Runs a set of commands using the runners shell
     - name: Build stmnes
       run: |
-        cmake -B build/stm32 -G Ninja -DCMAKE_TOOLCHAIN_FILE=script/arm-none-eabi-toolchain.cmake
+        cmake -B build/stm32 -G Ninja -DCMAKE_TOOLCHAIN_FILE=cmake/arm-none-eabi-toolchain.cmake -DCONFIG_MIPI=ON -DCONFIG_LCD=ON
         cmake --build build/stm32
       
     - name: Build nesdl
