--- a/apps/sdl/CMakeLists.txt
+++ b/apps/sdl/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable(nesdl)
 target_sources(nesdl PRIVATE
 	sdl.c
 	)
-target_link_libraries(nesdl PRIVATE SDL2 nes)
+target_link_libraries(nesdl PRIVATE SDL2 nes -Wl,--whole-archive logging -Wl,--no-whole-archive)
