--- a/apps/nes/CMakeLists.txt
+++ b/apps/nes/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(nes.elf)
 target_sources(nes.elf PRIVATE
 	rom.c
 	main.c)
-target_link_libraries(nes.elf PRIVATE nes stm32 lcd -Wl,--whole-archive logging -Wl,--no-whole-archive)
+target_link_libraries(nes.elf PRIVATE nes gprof stm32 lcd -Wl,--whole-archive logging -Wl,--no-whole-archive)
 
 add_custom_command(TARGET nes.elf POST_BUILD
 	COMMAND ${CMAKE_OBJCOPY}
